# pre-commit-hooks

./: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .semgrepignore  Dockerfile  Dockerfile.alpine  Dockerfile.debian  Justfile  LICENSE  Pipfile  README.md  Tiltfile  poetry.toml  pyproject.toml  setup.cfg
dev-scripts/: Tiltfile  build  build-python.py  check-poetry-sources.py  check-python-versions-match.py  check-trailing-newline  check-trailing-whitespace  enable-git-hooks  install  migrate-to-pre-commit  setup-pipenv-link  update-boilerplate.sh
dev-scripts/pipenv_shims/: _shim_script  python
k8s/: deployment.yaml
pysrc/: fizzbuzz.py
pysrc/fizzbuzz/: __init__.py
pysrc/gozynta_pc_hooks/: check_poetry_sources.py  check_python_versions_match.py
pytests/: __init__.py  test_check_poetry_sources.py  test_check_python_versions_match.py  test_fizzbuzz.py
