[tool.black]
line-length = 119
experimental_string_processing = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--strict-markers --strict-config"
asyncio_mode = "auto"
norecursedirs = [
    ".git",
    ".tox",
    ".env",
    ".venv",
]
testpaths = [
    "pytests",
]
timeout = 60
pythonpath = [
    "pysrc",
]

[tool.poetry]
name = "pre-commit-hooks"
version = "1.0.0"
description = ""
authors = ["Gozynta <support@gozynta.com>"]
license = "Proprietary"
readme = "README.md"
classifiers = [
    "Private :: Do Not Upload"
]
packages = [{include = "gozynta_pc_hooks", from="pysrc"}]
include = ["LICENSE"]

[tool.poetry.scripts]
check_poetry_sources = "gozynta_pc_hooks.check_poetry_sources:main"
check_python_versions_match = "gozynta_pc_hooks.check_python_versions_match:main"

[tool.poetry.dependencies]
python = "^3.10"
pipfile = "^0.0.2"
pyyaml = "^6.0"
toml = "^0.10.2"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
coverage = "^6.4.0"
pytest = "^7.1.0"
pytest-asyncio = ">=0.18.3"
pytest-timeout = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pydev"
url = "https://us-east1-python.pkg.dev/kube-test-284217/pydev/simple"
priority = "explicit"


[[tool.poetry.source]]
name = "kubernetes-242623"
url = "https://us-python.pkg.dev/kubernetes-242623/gozynta-pipy/simple"
priority = "explicit"


[[tool.poetry.source]]
name = "PyPI"
priority = "default"
